<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/background_dark">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:id="@+id/login_view">
		<TextView android:layout_width="wrap_content" android:id="@+id/textView1"
			android:layout_height="wrap_content" android:textAppearance="@style/Header_Large"
			android:text="@string/login_header"></TextView>
		<TextView android:text="@string/login_description"
			android:layout_width="wrap_content" android:id="@+id/textView2"
			android:layout_height="wrap_content" android:textAppearance="@style/Text_Plain"
			android:paddingTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/textView3"
			android:layout_height="wrap_content" android:textAppearance="@style/Header_Medium"
			android:text="@string/login_label_username" android:paddingTop="10dip"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/login_inputbox_username"></EditText>
		<TextView android:text="@string/login_label_token"
			android:layout_width="wrap_content" android:id="@+id/textView4"
			android:layout_height="wrap_content" android:textAppearance="@style/Header_Medium"
			android:paddingTop="10dip"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/login_inputbox_token"></EditText>
		<Button android:layout_width="wrap_content"
			android:text="@string/login_button_scan_with_qr"
			android:layout_height="wrap_content" android:id="@+id/login_button_scan_qr"></Button>
		<Button android:layout_width="wrap_content" android:text="@string/login_button_login"
			android:layout_height="wrap_content" android:id="@+id/login_button_login"></Button>

	</LinearLayout>
</ScrollView>



